@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.musicvideos.theaudiodb.com"
        name="TheAudioDb.com for Music Videos"
-       version="1.2.0"
+       version="1.2.1"
        provider-name="Team XBMC">
   <requires>
     <import addon="xbmc.metadata" version="2.1.0"/>
@@ -54,7 +54,7 @@
     <description lang="da">Hent Musikvideo-information</description>
     <description lang="de">Musik Video Information herunterladen</description>
     <description lang="el">Λήψη πληροφοριών Μουσικών Βίντεο</description>
-    <description lang="en">This scraper is downloading Music Video information from TheAudioDB.com. Due to various search difficulties the scraper currently expects the folder/filename to be formatted as 'artist - trackname' otherwise it will not return results. Odds are also high that artist or tracks with '-' mark will not be found.</description>
+    <description lang="en">This scraper is downloading Music Video information from TheAudioDB.com. Due to various search difficulties the scraper currently expects the folder/filename to be formatted as 'artist - trackname' otherwise it will not return results.</description>
     <description lang="es">Descarga información del videoclip</description>
     <description lang="es_AR">Descarga información del Video Clip</description>
     <description lang="es_MX">Descarga Información de Vídeos de Músca</description>
