@@ -8,7 +8,7 @@
 	<CreateSearchUrl dest="3">
 		<RegExp input="$$5" output="\1" dest="3">
 			<RegExp input="$$1" output="&lt;url&gt;http://www.theaudiodb.com/api/v1/json/58424d43204d6564696120/searchtrack.php?s=\1&amp;amp;t=\2&lt;/url&gt;" dest="6">
-				<expression trim="1,2">(.+)%20%20%20(.+)</expression>
+				<expression trim="1,2">(.+)%20(?:%20|-)%20(.+)</expression>
 			</RegExp>
 			<RegExp input="$$6" output="\1" dest="5">
 				<expression noclean="1" />
