@@ -1,3 +1,6 @@
+[B]1.2.1[/B]
+- Fixed: Allow for dashes in artist/title (v12.2+ required)
+
 [B]1.2.0[/B]
 - Added: NfoURL function
 - Added: Album thumbs from theaudiodb.com
